force-app/main/default/objects/SDO_Einstein_GPT_Configuration__c/SDO_Einstein_GPT_Configuration__c.object-meta.xml
<CustomObject>
    <label>Einstein Gen AI Configuration</label>
    <nameField>
        <label>Einstein Gen AI Demo Configuration Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Einstein Gen AI Configurations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>