force-app/main/default/objects/SDO_Einstein_GPT_Configuration__c/fields/Suggested_Action_1_Label__c.field-meta.xml
<CustomField>
    <fullName>Suggested_Action_1_Label__c</fullName>
    <label>Suggested Action 1 Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>