force-app/main/default/objects/SDO_Einstein_GPT_Configuration__c/fields/Suggested_Action_2__c.field-meta.xml
<CustomField>
    <fullName>Suggested_Action_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Suggested Action 2</label>
    <referenceTo>SDO_Sales_GPT_Simulated_Reply__c</referenceTo>
    <relationshipLabel>Einstein Gen AI Configurations (Suggested Action 2)</relationshipLabel>
    <relationshipName>Einstein_Gen_AI_Configurations1</relationshipName>
    <type>Lookup</type>
</CustomField>