force-app/main/default/objects/SDO_Einstein_GPT_Configuration__c/fields/Unknown_Answer_Fallback__c.field-meta.xml
<CustomField>
    <fullName>Unknown_Answer_Fallback__c</fullName>
    <label>Unknown Answer Fallback</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>