force-app/main/default/objects/SDO_Einstein_GPT_Configuration__c/fields/Work_Resolution__c.field-meta.xml
<CustomField>
    <fullName>Work_Resolution__c</fullName>
    <label>Resolution</label>
    <type>TextArea</type>
</CustomField>