force-app/main/default/objects/SDO_Einstein_GPT_Configuration__c/fields/Work_Summary__c.field-meta.xml
<CustomField>
    <fullName>Work_Summary__c</fullName>
    <label>Summary</label>
    <type>TextArea</type>
</CustomField>