force-app/main/default/objects/SDO_Einstein_GPT_Configuration__c/recordTypes/SDO_Einstein_Sales.recordType-meta.xml
<RecordType>
    <fullName>SDO_Einstein_Sales</fullName>
    <active>true</active>
    <label>Sales</label>
</RecordType>